[package]
name = "check_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
axum = "0.7.5"
cc = "1.0.90"
console_error_panic_hook = "0.1.7"
gcc = "0.3.55"
leptos = "0.6.9"
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = "1.37.0"
