[package]
name = "check_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
axum = "0.7.5"
rand = "0.8.5"
redis = "0.25.3"
serde = "1.0.197"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1.0", features = ["full"] }